added favicon and minor clean up :paw_prints::sparkles::wrench:

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 3: Vanity Fur</title>
+    <title>Vanity Fur</title>
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Limelight&display=swap" rel="stylesheet"> 
+    <link type="image/png" href="./assets/pawLogo.png" rel="icon">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -40,6 +41,7 @@
 
                         <!-- Pet Selection -->
                         <fieldset class="pet">
+                            <!-- //// TO DO: USE H2 INSTEAD FOR SEMANTIC REASONS -->
                             <legend>pick your pet:</legend>
                         
                             <label aria-label="Click to add dog" for="dog">pup</label>
@@ -93,6 +95,7 @@
                 </div>
 
                 <div class="flexCanvas">
+                    <!-- //// CHANGE TO SECTION BECAUSE IT MAKES MORE SEMANTIC SENSE -->
                     <aside class="canvas">
 
                         <!-- Pet Images -->
@@ -194,7 +197,7 @@
                                         <img src="./assets/toyBall.png" alt="A pink and white ball.">
                                     </div>
                                 </div>
-
+                                <!--  /////// TO DO: Add comments that will mention end of div -->
                             </div>
                         </div>
                         
@@ -209,8 +212,7 @@
     <!-- Footer / Credit -->
     <footer>
         <div class="wrapper footerContainer">
-            <p>Designed by Pik Lin</p>
-            <p>Vectorized by Howe Foo</p>
+            <p>Designed by Pik Lin Hoe</p>
         </div>
     </footer>
 
